[gd_scene load_steps=6 format=3 uid="uid://dxr48kr6fnif8"]

[ext_resource type="Script" path="res://inventory_example.gd" id="1_jf7ad"]
[ext_resource type="Script" path="res://item_container.gd" id="2_5hy0i"]
[ext_resource type="PackedScene" uid="uid://dsjbdsiw1j0b" path="res://slot_display.tscn" id="3_s8ton"]
[ext_resource type="Script" path="res://slot_display.gd" id="4_ix6cv"]
[ext_resource type="Script" path="res://skill_container.gd" id="5_d4rm7"]

[node name="InventoryExample" type="Control" node_paths=PackedStringArray("itemContainer", "skillContainer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jf7ad")
itemContainer = NodePath("HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer")
skillContainer = NodePath("HBoxContainer/VBoxContainerItems/MarginContainer/SkillContainer")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.165533, 0.156, 1)

[node name="LabelInventoryTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_right = 37.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Inventory"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainerSkills" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelItems" type="Label" parent="HBoxContainer/VBoxContainerSkills"]
layout_mode = 2
text = "Items"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainerSkills"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemContainer" type="GridContainer" parent="HBoxContainer/VBoxContainerSkills/MarginContainer"]
layout_mode = 2
columns = 10
script = ExtResource("2_5hy0i")
slots = 20

[node name="Slot 0" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 1" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 2" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 3" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 4" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 5" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 6" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 7" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 8" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 9" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 10" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 11" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 12" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 13" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 14" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 15" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 16" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 17" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 18" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 19" type="ColorRect" parent="HBoxContainer/VBoxContainerSkills/MarginContainer/ItemContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="VBoxContainerItems" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelSkills" type="Label" parent="HBoxContainer/VBoxContainerItems"]
layout_mode = 2
text = "Skills"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainerItems"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SkillContainer" type="GridContainer" parent="HBoxContainer/VBoxContainerItems/MarginContainer"]
layout_mode = 2
columns = 10
script = ExtResource("5_d4rm7")
slots = 5

[node name="Slot 0" type="ColorRect" parent="HBoxContainer/VBoxContainerItems/MarginContainer/SkillContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 1" type="ColorRect" parent="HBoxContainer/VBoxContainerItems/MarginContainer/SkillContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 2" type="ColorRect" parent="HBoxContainer/VBoxContainerItems/MarginContainer/SkillContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 3" type="ColorRect" parent="HBoxContainer/VBoxContainerItems/MarginContainer/SkillContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="Slot 4" type="ColorRect" parent="HBoxContainer/VBoxContainerItems/MarginContainer/SkillContainer" node_paths=PackedStringArray("sprite") instance=ExtResource("3_s8ton")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(1, 1, 1, 0.666667)
script = ExtResource("4_ix6cv")
sprite = NodePath("Sprite2D")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ButtonAddItem" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Item"

[node name="ButtonAddSkill" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Skill"

[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/ButtonAddItem" to="." method="_on_button_add_item_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/ButtonAddSkill" to="." method="_on_button_add_skill_pressed"]
